# simphy

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  todo.md
.github/workflows/: release.yml  rust.yml
src/: main.rs
src/app/: mod.rs  plugin.rs  state.rs
src/camera/: components.rs  mod.rs  plugin.rs  setup.rs
src/dev/: mod.rs  plugin.rs  setup.rs
src/editor/: components.rs  mod.rs  plugin.rs  resources.rs
src/input/: mod.rs  plugin.rs
src/project/: document.rs  export.rs  file_format.rs  import.rs  mod.rs
src/settings/: editor_prefs.rs  mod.rs  resource.rs  ui_settings.rs
src/shared/: entity_shape.rs  mod.rs  theme.rs  utils.rs
src/simulation/: components.rs  field.rs  mod.rs  plugin.rs
src/ui/: mod.rs  plugin.rs  resources.rs
src/ui/panels/: editor.rs  menubar.rs  mod.rs  status.rs  timeline.rs  toolbar.rs
