[package]
name = "simphy"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.10.0"
bevy = { version = "0.18.0", features = ["2d"] }
avian2d = { version = "0.5", features = ["simd", "serialize"] }
bevy_enhanced_input = "0.24"
bevy_egui = "0.39.1"
rfd = "0.17.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
ron = "0.8"

[features]
default = ["dev"]
dev = ["bevy/dynamic_linking"]
release = []

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
panic = "abort"
strip = true
